added styles of popup and notification

--- a/index.html
+++ b/index.html
@@ -30,29 +30,23 @@
   </svg>
 
   <div class="wrong-letters-container">
-    <div id="wrong-letters">
-      <p>Неправильные буквы:</p>
-      <span>e, t, u</span>
-    </div>
+    <div id="wrong-letters"></div>
   </div>
-
-  <div class="word" id="word">
-    <div class="letter">п</div>
-    <div class="letter">р</div>
-    <div class="letter">и</div>
-    <div class="letter">в</div>
-    <div class="letter">е</div>
-    <div class="letter">т</div>
-  </div>
+  <div class="word" id="word"></div>
 </div>
 
 <!--Container for final -->
 <div class="popup-container" id="popup-container">
   <div class="popup">
-    <h2 id="final-message">Ты выиграл</h2>
+    <h2 id="final-message"></h2>
     <button id="play-button">Играть сначала</button>
-    <p>Ты уже вводил эту букву</p>
   </div>
 </div>
+
+<!-- Notification -->
+<div class="notification-container" id="notification-container">
+  <p>Ты уже вводил эту букву</p>
+</div>
+
 </body>
 </html>
