--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
 <div class="notification-container" id="notification-container">
   <p>Ты уже вводил эту букву</p>
 </div>
-
+<script src="script.js"></script>
 </body>
 </html>
